--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Clouduboy - Arduboy cloud compiler",
   "main": "server/app.js",
   "scripts": {
+    "server": "node server/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "https://twitter.com/slsoftworks",
