--- a/flasher/package.json
+++ b/flasher/package.json
@@ -14,6 +14,7 @@
     "chip.avr.avr109": "^1.0.4",
     "intel-hex": "^0.1.1",
     "menubar": "^3.0.0",
+    "node-fetch": "^1.3.3",
     "serialport": "^2.0.5",
     "tmp": "0.0.28"
   },
