--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clouduboy",
-  "version": "0.5.0",
+  "version": "0.6.2",
   "description": "Clouduboy - Arduboy cloud compiler",
   "main": "server/app.js",
   "scripts": {
@@ -15,6 +15,7 @@
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "formidable": "^1.0.17",
+    "nedb": "^1.7.4",
     "vhost": "^3.0.2"
   }
 }
