--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "clouduboy",
-  "version": "0.6.2",
+  "version": "0.7.5",
   "description": "Clouduboy - Arduboy cloud compiler",
   "main": "server/app.js",
   "scripts": {
     "server": "node server/app.js",
+    "flasher": "electron flasher/app/menubar.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "https://twitter.com/slsoftworks",
@@ -12,9 +13,12 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "child-process-promise": "^1.1.0",
+    "cookie-parser": "^1.4.1",
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "formidable": "^1.0.17",
+    "fs-extra": "^0.26.5",
+    "fs-promise": "^0.4.1",
     "nedb": "^1.7.4",
     "vhost": "^3.0.2"
   }
