--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "clouduboy",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "description": "Clouduboy - Arduboy cloud compiler",
   "main": "server/app.js",
   "scripts": {
     "server": "node server/app.js",
     "flasher": "electron flasher/app/menubar.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel editor/js -d editor/dist/js"
   },
   "author": "https://twitter.com/slsoftworks",
   "license": "MIT",
@@ -21,5 +22,9 @@
     "fs-promise": "^0.4.1",
     "nedb": "^1.7.4",
     "vhost": "^3.0.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.5.1",
+    "babel-preset-es2015": "^6.5.0"
   }
 }
