--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "server/app.js",
   "repository": "flaki/clouduboy",
   "scripts": {
-    "server": "node server/app.js",
+    "start": "node server/app.js",
     "flasher": "electron flasher/app/menubar.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:transpile": "babel editor/js -d editor/dist/js",
-    "build:copy-libs": "mkdir -p editor/dist/lib; cp node_modules/whatwg-fetch/fetch.js editor/dist/lib/fetch.js",
+    "build:copy-libs": "node -r shelljs/global -e 'mkdir(\"-p\", \"editor/dist/lib\"); cp(\"node_modules/whatwg-fetch/fetch.js\", \"editor/dist/lib/fetch.js\");'",
     "build": "npm run build:transpile & npm run build:copy-libs"
   },
   "author": "https://twitter.com/slsoftworks",
@@ -29,6 +29,7 @@
   "devDependencies": {
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
+    "shelljs": "^0.6.0",
     "whatwg-fetch": "^0.11.0"
   }
 }
