--- a/flasher/package.json
+++ b/flasher/package.json
@@ -2,24 +2,21 @@
   "name": "clouduboy-flasher",
   "version": "0.1.0",
   "description": "Add-on for flashing Arduboy apps from the Clouduboy IDE",
-  "main": "index.js",
+  "main": "app/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "install-app-deps",
+    "build": "electron-packager app ClouduboyFlasher --platform=darwin --arch=x64 --version=0.36.9 --icon=build/Icon.icns -out=dist",
+    "pack": "build",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron app.js"
   },
-  "author": "Flaki",
+  "author": "Flaki (https://twitter.com/slsoftworks)",
   "license": "MIT",
-  "dependencies": {
-    "async": "^1.5.0",
-    "avrgirl-arduino": "^1.5.6",
-    "chip.avr.avr109": "^1.0.4",
-    "intel-hex": "^0.1.1",
-    "menubar": "^3.0.0",
-    "node-fetch": "^1.3.3",
-    "serialport": "^2.0.5",
-    "tmp": "0.0.28"
-  },
+  "repository": "flaki/clouduboy-flasher",
   "devDependencies": {
-    "electron-packager": "^5.2.1",
-    "electron-rebuild": "^1.0.2"
+    "electron-builder": "2.8.3",
+    "electron-packager": "5.2.1",
+    "electron-prebuilt": "0.36.9",
+    "electron-rebuild": "^1.1.3"
   }
 }
