--- a/flasher/app/package.json
+++ b/flasher/app/package.json
@@ -11,17 +11,17 @@
     "postinstall": "electron-rebuild && cp -r node_modules/serialport/build/Release/electron-* node_modules/serialport/build/Release/node-v47-darwin-x64"
   },
   "dependencies": {
-    "async": "^1.5.0",
+    "async": "^2.0.0-rc.6",
     "avrgirl-arduino": "^1.5.6",
     "chip.avr.avr109": "^1.0.4",
     "intel-hex": "^0.1.1",
-    "menubar": "^3.0.0",
+    "menubar": "^4.1.2",
     "node-fetch": "^1.3.3",
-    "serialport": "^2.0.5",
+    "serialport": "^4.0.0",
     "tmp": "0.0.28"
   },
   "devDependencies": {
-    "electron-prebuilt": "0.36.9",
+    "electron-prebuilt": "1.2.5",
     "electron-rebuild": "^1.1.3"
   },
   "build": {
