--- a/package.json
+++ b/package.json
@@ -7,16 +7,12 @@
   "scripts": {
     "start": "node server/app.js",
     "start:prod": "node server/app.js --dist",
-
     "flasher": "electron flasher/app",
-
     "test": "echo \"Error: no test specified\" && exit 1",
-
     "build:transpile": "babel editor/js -d editor/dist/js",
     "build:copy-libs": "node scripts/build-copy-libs.js",
     "build:dist-html": "node scripts/build-dist-html.js",
     "build:dist-js": "npm run build:transpile & npm run build:copy-libs",
-
     "build": "npm run build:dist-html & npm run build:dist-js"
   },
   "author": "Flaki (https://twitter.com/slsoftworks)",
@@ -30,7 +26,9 @@
     "formidable": "^1.0.17",
     "fs-extra": "^0.26.5",
     "fs-promise": "^0.4.1",
+    "jsonfile": "^3.0.0",
     "nedb": "^1.7.4",
+    "tar": "^3.1.5",
     "vhost": "^3.0.2"
   },
   "devDependencies": {
