--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "tar": "^3.1.5",
     "shelljs": "^0.7.7",
     "vhost": "^3.0.2",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.3",
+    "rollup": "^0.43.0"
   },
   "devDependencies": {
     "babel-cli": "^6.5.1",
